--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
     "react-transition-group": "^4.3.0",
     "sass": "^1.69.5"
   },
