--- a/client/package.json
+++ b/client/package.json
@@ -5,11 +5,12 @@
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
     "react-transition-group": "^4.3.0",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "sweetalert2": "^11.10.1"
   },
   "scripts": {
     "start": "react-scripts start",
